added right context specific to rosegarden api